# grodan

./: .gitignore  README.md  elm-package.json  grodan.cabal  index.html  package.json  stack.yaml
backend/: Main.hs
client/src/Grodan/: Config.elm  Model.elm
frontend/Grodan/: .Main.elm.swn
server/: Main.hs
src/Grodan/: .Main.elm.swn  .Main.elm.swo  Main.elm
static/src/: Grodan.elm  Main.elm
static/src/Grodan/: Update.elm  Util.elm  View.elm
