name:                grodan
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Fabian Rios
maintainer:          fabian.rios@rocafuerte.se
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      server
  -- exposed-modules:  Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable grodan-exe
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-html
                     , aeson
                     , servant
                     , servant-server
                     , servant-blaze
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite grodan-test
  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grodan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/projec://github.com/yemi/grodan
